--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
+    "ejs-lint": "^1.2.1",
     "electron": "^15.1.2",
     "express": "^4.17.1",
     "mongoose": "^6.0.10",
