link with PolarID and add some stuff

--- a/.env_TEMPLATE
+++ b/.env_TEMPLATE
@@ -4,3 +4,9 @@
 
 # The login URI for MongoDB
 MONGO_URI=
+
+# The passport secret to use
+PASSPORT_SECRET=
+
+# The Discord applications secret
+DISCORD_SECRET=
