finish first beta

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "electron": "^15.1.2",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "googleapis": "^92.0.0",
     "mongoose": "^6.0.10",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.13",
     "passport": "^0.5.0",
     "passport-discord": "https://github.com/tonestrike/passport-discord",
